Update contact page content

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       <div class="contact-cards">
         <div class="contact-card">
           <h3>Call us</h3>
-          <p>(555) 123-4567</p>
+          <p>(+254) 795183452</p>
           <span>Mon - Fri, 9:00 AM - 6:00 PM</span>
         </div>
         <div class="contact-card">
@@ -55,7 +55,7 @@
       <p>Get in touch with us for any inquiries about our vehicles.</p>
       <div class="contact-info">
         <p><strong>Email:</strong> info@drivehubmotorstrevorpoppy.com</p>
-        <p><strong>Phone:</strong> (555) 123-4567</p>
+        <p><strong>Phone:</strong> (+254) 795183452</p>
         <p><strong>Address:</strong> 123 Car Street, Nairobi City, AC 12345</p>
       </div>
       <div class="hours">
